<resources>
    <string name="app_name">Base Station 9</string>
    <string name="author">FrostBlade LLC</string>
    <string name="website">http://www.frostbladegames.com/</string>
    <string name="change_level">Switch Levels</string>
	<string name="test_animation">Test Animation</string>
	<string name="test_diary">Test Diary</string>
	<string name="unlock_levels">Unlock All Levels</string>
	<string name="unlock_next_level">Unlock Next Level</string>
	<string name="method_tracing">Toggle Method Tracing</string>
	<string name="radio_droid1">Droid1</string>
	<string name="radio_droid2">Droid2</string>
	<string name="radio_droid3">Droid3</string>
	<string name="radio_droid4">Droid4</string>
	<string name="radio_droid5">Droid5</string>
	<string name="button_newgame_save">Save</string>
	<string name="button_newgame_cancel">Cancel</string>
	<string name="preference_save_game">Game Data</string>
	<string name="preference_erase_save_game">Erase Saved Game</string>
	<string name="preference_erase_save_game_dialog">Really erase your saved game?  All of your progress will be lost!</string>
	<string name="preference_erase_save_game_dialog_title">Now wait just a minute</string>
	<string name="preference_erase_save_game_dialog_ok">Erase Save</string>
	<string name="preference_erase_save_game_dialog_cancel">Cancel</string>
	<string name="preference_game_difficulty">Game Difficulty</string>
	<string name="preference_set_difficulty">Set Difficulty Level</string>
	<string-array name="preference_difficulty_options">
    	<item>New Model (Easy)</item>
    	<item>Efficient (Medium)</item>
    	<item>Machine (Hard)</item>
	</string-array>
	<string name="preference_game_settings">Game Settings</string>
	<string name="preference_enable_music">Enable Background Music</string>
	<string name="preference_enable_music_summary">Disabling music may improve performance on some devices.</string>
	<string name="preference_enable_sound">Enable Sound</string>
	<string name="preference_enable_sound_summary">Disabling sound may improve performance on some devices.</string>
	<string name="preference_safe_mode">Safe Mode</string>
	<string name="preference_safe_mode_summary">Enables safety hacks for broken devices (Cliq, etc), but causes some visual artifacts. Try this if you have problems.</string>
	<string name="preference_configure_controls">Configure Controls</string>
	<string name="preference_enable_click_attack">Click Attack</string>
	<string name="preference_enable_click_attack_summary">Use the trackball click or directional pad center button to attack.</string>
	<string name="preference_enable_tilt_controls">Tilt Controls</string>
	<string name="preference_enable_tilt_controls_summary">EXPERIMENTAL!  Tilt the phone left and right to drive the Android around.  Good for devices with no trackball or d-pad.</string>
	<string name="preference_movement_sensitivity">Motion Sensitivity</string>
	<string name="preference_movement_sensitivity_summary">Adjusts the sensitivity of the trackball, d-pad, or optical sensor.</string>
	<string name="preference_movement_min">Slow</string>
	<string name="preference_movement_max">Fast</string>
	<string name="preference_tilt_sensitivity">Tilt Sensitivity</string>
	<string name="preference_tilt_sensitivity_summary">Adjusts the sensitivity of the tilt controls.</string>
	<string name="preference_tilt_min">Slow</string>
	<string name="preference_tilt_max">Fast</string>
	<string name="preference_key_config">Configure Keyboard</string>
	<string name="preference_key_config_summary">Customize keys for phones with hard keyboards.</string>
	<string name="preference_key_config_dialog_title">Configure Keyboard</string>
	<string name="preference_key_config_dialog_ok">Save</string>
	<string name="preference_key_config_dialog_cancel">Cancel</string>
	<string name="preference_key_config_left">Left</string>
	<string name="preference_key_config_right">Right</string>
	<string name="preference_key_config_jump">Jump</string>
	<string name="preference_key_config_attack">Attack</string>
	<string name="preference_enable_statistics">Report Play Statistics</string>
	<string name="preference_enable_statistics_summary">Sends anonymous play statistics to a server to help us make this game more fun.</string>
	<string name="preference_erase_game">Erase Game</string>
	<string name="preference_erase_game_summary">To erase game history, go to Android -> Settings -> Applications -> Manage Applications -> Base Station 9 -> click Clear Data button.  Please note this erase is permanent and cannot be recovered. </string>
	<string name="preference_about">About</string>
	<string name="preference_about_basestation9">About Base Station 9</string>
	<string name="preference_version_title">Version</string>
	<string name="preference_version_summary">v1.7</string>
	<string name="preference_about_summary">Base Station 9 developed by FrostBlade LLC.</string>
	<string name="preference_visit_site">Go to the FrostBlade Web Site</string>
	<string name="preference_thanks_title">Special Thanks</string>
	<string name="preference_thanks_summary">Special Thanks to Google and the Android Team, Chris Pruett, the contributors to the Android Dev Blog and Stack Overflow, and to Soundation.</string>
	<string name="preference_licence_title">License</string>
	<string name="preference_licence_summary">Base Station 9 developed by FrostBlade LLC.  Copyright 2012 by FrostBlade LLC.  All Rights Reserved. Portions of this game are modifications based on work created and shared by Google and used according to terms described in the Creative Commons 3.0 Attribution License.</string>
	<string name="preference_misc">Miscellaneous</string>
	<string name="preference_enable_debug">Debug Log</string>
	<string name="preference_enable_debug_summary">Output various logs to logcat.  This option will slow the game down.</string>
	<string name="saved_game_erased_notification">Saved Game Erased</string>
	<string name="returnmainmenu_game_dialog_title">Return to Main Menu</string>
	<string name="returnmainmenu_game_dialog_ok">Main Menu</string>
	<string name="returnmainmenu_game_dialog_cancel">Cancel</string>
	<string name="returnmainmenu_game_dialog_message">End Current Game?</string>
	<string name="quit_game_dialog_title">Quit Base Station 9</string>
	<string name="quit_game_dialog_ok">Quit</string>
	<string name="quit_game_dialog_cancel">Cancel</string>
	<string name="quit_game_dialog_message">Quit Game?</string>
	<string name="license_verification_dialog_title">License Verification</string>
	<string name="license_allow_dialog_message">License Verified</string>
	<string name="license_allow_dialog_ok">OK</string>
	<string name="license_dont_allow_dialog_message">Sorry, the License could not be verified. Please check your network connection or re-start the app. If not currently licensed, please go to Google Play to purchase a license.</string>
	<string name="license_dont_allow_dialog_close_app">Close App</string>
	<string name="nav_type">Trackball</string>
	<string name="whats_new_dialog_title">Base Station 9</string>
	<string name="whats_new_dialog_ok">OK</string>
	<string name="whats_new_dialog_message">Thanks for downloading Base Station 9\n\n
	<b>New Version:</b>\n
	As of version 1.3, more than 500,000 users have downloaded Base Station 9.  Thank you for your support!
	\n
	\n
	Also note that this game sends anonymous play statistics back to a server.  If you’d rather not
	allow that, you can turn it off in the options screen.</string>
	<string name="whats_new_ticker">New in this version: Fix blackouts on broken phones (Cliq, Backflip, etc), improved controls, adjustable control sensitivity, various performance and stability improvements.</string>
	<string name="memory_playback_start">MEMORY PLAYBACK START</string>
	<string name="memory_playback_complete">MEMORY PLAYBACK COMPLETE</string>
</resources>